Search widget spacing When user switches from a search filter using an input field to one using a drop-down the bottom margin no longer disappears. The disappearing margin caused an unpleasant bounce effect.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -708,7 +708,11 @@ select.page-size {
   }
 
   .ui-widget-content a.search-reset-start {
-    color: @grey;
+      color: @grey;
+  }
+
+  #search-widget-spacer {
+      height: 20px;
   }
 
 /* breadcrumbs */
